sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:19: error: not found: value nbchangt
    nbchangt-=1
    ^